--- a/TabelaDeVerdade.html
+++ b/TabelaDeVerdade.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- BootStrap -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="script.js">
+    <!-- JavaScript -->
+    <script rel="stylesheet" src="script.js"></script>
     <title>Tabelas da Verdade</title>
 </head>
 
@@ -26,7 +27,7 @@
         </div>
         <div class="btn-group" role="group" aria-label="Second group">
              <button type="button" class="btn btn-outline-primary" onclick="insert('~')" data-bs-toggle="tooltip" data-bs-placement="top"
-                 title="Negação" onclick="insert()">~</button>
+             title="Negação">~</button>
             <button type="button" class="btn btn-outline-primary" onclick="insert('^')" data-bs-toggle="tooltip" data-bs-placement="top"
                 title="Conjunção">^</button>
             <button type="button" class="btn btn-outline-primary" onclick="insert('v')" data-bs-toggle="tooltip" data-bs-placement="top"
@@ -46,18 +47,10 @@
         </div>
         <br><br>
         <div>
-            <p id="resultado"></p>
+            <input type="text" class="form-control" id="equation" aria-describedby="emailHelp" placeholder="Introduza a equação">
+            <br><br>
+            <button type="button" class="btn btn-primary" onclick="calculate()">Calcular</button>
         </div>
-        <script>
-            function insert(x){
-                var y = document.getElementById('resultado').innerHTML;
-                document.getElementById('resultado').innerHTML = x+y; 
-            }
-            function clean(){
-                document.getElementById('resultado').innerHTML = "";
-            }
-        </script>
-       
     </div>
 </body>
 
