Beginning of development of the calculator Added the function of denial

--- a/TabelaDeVerdade.html
+++ b/TabelaDeVerdade.html
@@ -17,13 +17,13 @@
 
 <body>
     <div id="div" style="padding-top: 20px;">
-        <h1>Tabela da Verdade</h1>
-        <p>Bem vindo aqui poderá fazer calculos a tabela da verdade</p>
+        <h1>Álgbera de Boole</h1>
+        <p>Bem vindo aqui poderá fazer cálculos com a Álgbera de Boole</p>
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button" class="btn btn-outline-primary" onclick="insert('A') "data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Variável">A</button>
-            <button type="button" class="btn btn-outline-primary" onclick="insert('B')" data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Variável">B</button>
+            <button type="button" class="btn btn-outline-primary" onclick="insert('V') "data-bs-toggle="tooltip" data-bs-placement="top"
+                title="Verdadeiro">V</button>
+            <button type="button" class="btn btn-outline-primary" onclick="insert('F')" data-bs-toggle="tooltip" data-bs-placement="top"
+                title="Falso">F</button>
         </div>
         <div class="btn-group" role="group" aria-label="Second group">
              <button type="button" class="btn btn-outline-primary" onclick="insert('~')" data-bs-toggle="tooltip" data-bs-placement="top"
